[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-policyforge"
version = "0.1.1"
description = "Auto-generate security policies from a short questionnaire"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "compliance", "policyforge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/policyforge"

[project.scripts]
"policyforge-emit" = "policyforge.connect:emit_main"
policyforge = "policyforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["policyforge"]

[tool.hatch.metadata]
allow-direct-references = true
